--- a/tasks/00-git.yml
+++ b/tasks/00-git.yml
@@ -11,4 +11,9 @@
 - name: Pull sources from the repository.
   git: repo={{repo}} dest={{project_root}} version={{branch}} accept_hostkey=yes
   become_user: ubuntu
+  when: build == 'vagrant'
+
+- name: Pull sources from the repository.
+  git: repo={{repo}} dest={{project_root}} version={{branch}} accept_hostkey=yes key_file=/tmp/private_key
+  when: build == 'aws'
 
