default postgresql configuration

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -29,3 +29,33 @@ enable_cache_warmup: True
 schema_update: False
 migrations: False
 symlink_assets: True
+
+# POSTRESQL
+postgresql_version: 9.6
+postgresql_admin_user: "postgres"
+postgresql_default_auth_method: "trust"
+postgresql_listen_addresses:
+  - *
+postgresql_databases:
+  - name: database
+    owner: user          # optional; specify the owner of the database
+    hstore: yes         # flag to install the hstore extension on this database (yes/no)
+    uuid_ossp: yes      # flag to install the uuid-ossp extension on this database (yes/no)
+    citext: yes         # flag to install the citext extension on this database (yes/no)
+    encoding: 'UTF-8'   # override global {{ postgresql_encoding }} variable per database
+    lc_collate: 'en_US.UTF-8'   # override global {{ postgresql_locale }} variable per database
+    lc_ctype: 'en_US.UTF-8'     # override global {{ postgresql_ctype }} variable per database
+postgresql_database_extensions:
+  - db: database
+    extensions:
+      - hstore
+      - citext
+postgresql_users:
+  - name: user
+    pass: password
+    encrypted: no
+postgresql_user_privileges:
+  - name: user          # user name
+    db: user            # database
+    priv: "ALL"                 # privilege string format: example: INSERT,UPDATE/table:SELECT/anothertable:ALL
+    role_attr_flags: "CREATEDB" # role attribute flags
