--- a/tasks/30-cache.yml
+++ b/tasks/30-cache.yml
@@ -6,7 +6,7 @@
     - cache
 
 - name: Warmup sf cache.
-  shell: cd {{project_root}} && export SYMFONY_ENV={{env}}; {{php_path}} {{symfony_console}} {{cache_command}} {{console_opts}}
+  shell: cd {{project_root}} and export SYMFONY_ENV={{env}}; {{php_path}} {{symfony_console}} {{cache_command}} {{console_opts}}
   when: enable_cache_warmup == True
   tags:
     - cache
