--- a/tasks/60-db.yml
+++ b/tasks/60-db.yml
@@ -16,6 +16,7 @@
 - name: Schema Update.
   action: shell {{php_path}} {{symfony_console}} doctrine:schema:update --force
   run_once: true
+  when: project_type == 'default'
 
 - name: Copy Redis Databases to System
   copy:
