--- a/tasks/10-config.yml
+++ b/tasks/10-config.yml
@@ -1,14 +1,20 @@
 ---
 
-- name: Set application parameters
+- name: Set application parameters SF3
   template:
-    src: templates/parameters.yml.js2
+    src: templates/parameters.yml
     dest: "{{ project_root }}/app/config/parameters.yml"
-  when: project_type == 'default'
+  when: project_type == 'default' and symfony_version == '3'
 
-- name: Set application parameters
+- name: Set application parameters SF2
   template:
-    src: templates/parameters-event.yml.js2
+    src: templates/parameters-sf2.yml
+    dest: "{{ project_root }}/app/config/parameters.yml"
+  when: project_type == 'default' and symfony_version == '2'
+
+- name: Set application parameters SF3 EVENT
+  template:
+    src: templates/parameters-event.yml
     dest: "{{ project_root }}/app/config/parameters.yml"
   when: project_type == 'event'
 
@@ -17,15 +23,15 @@
 
 - name: Add jwt directory
   file: path={{project_root}}/var/jwt state=directory mode=0755
-  when: project_type == 'default'
+  when: project_type == 'default' and symfony_version == '3'
 
 - name: Add jwt private key
   copy: content="{{ jwt_private_pem }}" dest={{ project_root }}/var/jwt/private.pem
-  when: project_type == 'default'
+  when: project_type == 'default' and symfony_version == '3'
 
 - name: Add jwt public key
   copy: content="{{ jwt_public_pem }}" dest={{ project_root }}/var/jwt/public.pem
-  when: project_type == 'default'
+  when: project_type == 'default' and symfony_version == '3'
   
 - name: Replace cache and log directory Symfony2
   shell: |
