update db import vagrant

--- a/tasks/60-db.yml
+++ b/tasks/60-db.yml
@@ -6,12 +6,28 @@
     dest: /tmp
   with_items:
   - '{{postgresql_databases}}'
-  when: build == 'vagrant' and project_type == 'default'
+  when: build == 'vagrant' and project_type == 'default' and symfony_version == '3'
 
 - name: Import Databases
   shell: export PGPASSWORD='{{ db_pass }}' and psql -U sportfaction -h localhost -d sportfaction < /tmp/sportfaction.pgsql
-  when: build == 'vagrant' and project_type == 'default'
+  when: build == 'vagrant' and project_type == 'default' and symfony_version == '3'
 
+- name: Copy Databases to System
+  copy:
+    src: db/{{ item.name }}.gz
+    dest: /var/www
+  with_items:
+  - '{{mysql_databases}}'
+  when: build == 'vagrant' and symfony_version == '2'
+
+- name: Import Databases
+  mysql_db:
+    state: import
+    name: "{{ item.name }}"
+    target: /tmp/{{ item.name }}.gz
+  with_items:
+  - '{{mysql_databases}}'
+  when: build == 'vagrant' and symfony_version == '2'
 
 - name: Schema Update.
   action: shell {{php_path}} {{symfony_console}} doctrine:schema:update --force
@@ -22,7 +38,7 @@
   copy:
     src: db/dump.rdb
     dest: /tmp
-  when: build == 'vagrant' and project_type == 'default'  
+  when: build == 'vagrant' and project_type == 'default' and symfony_version == '3' 
 
 - name: import bdd Redis
   shell: |
@@ -34,4 +50,4 @@
       /etc/init.d/redis_6379 start
       redis-cli -a {{ redis_requirepass }} BGREWRITEAOF
       redis-cli -a {{ redis_requirepass }} info | grep aof_rewrite_in_progress
-  when: build == 'vagrant' and project_type == 'default'
+  when: build == 'vagrant' and project_type == 'default' and symfony_version == '3'
