--- a/tasks/00-git.yml
+++ b/tasks/00-git.yml
@@ -15,5 +15,6 @@
 
 - name: Pull sources from the repository.
   git: repo={{repo}} dest={{project_root}} version={{branch}} accept_hostkey=yes
+  become_user: ubuntu
   when: build == 'aws'
 
