--- a/tasks/00-git.yml
+++ b/tasks/00-git.yml
@@ -15,6 +15,7 @@
 
 - name: Pull sources from the repository.
   git: repo={{repo}} dest={{project_root}} version={{branch}} accept_hostkey=yes
+  git: repo={{repo}} dest={{project_root}} version={{branch}} accept_hostkey=yes key_file=/home/ubuntu/.ssh/idr_rsa
   become_user: ubuntu
   when: build == 'aws'
 
