--- a/tasks/00-git.yml
+++ b/tasks/00-git.yml
@@ -14,8 +14,7 @@
   when: build == 'vagrant'
 
 - name: Pull sources from the repository.
-  git: repo={{repo}} dest={{project_root}} version={{branch}} accept_hostkey=yes
-  git: repo={{repo}} dest={{project_root}} version={{branch}} accept_hostkey=yes key_file=/home/ubuntu/.ssh/idr_rsa
+  git: repo={{repo}} dest={{project_root}} version={{branch}} accept_hostkey=yes key_file=/home/ubuntu/.ssh/id_rsa
   become_user: ubuntu
   when: build == 'aws'
 
