--- a/tasks/00-git.yml
+++ b/tasks/00-git.yml
@@ -14,7 +14,7 @@
   when: build == 'vagrant'
 
 - name: Pull sources from the repository.
-  git: repo={{repo}} dest={{project_root}} version={{branch}} accept_hostkey=yes key_file=~/.ssh/id_rsa
+  git: repo={{repo}} dest={{project_root}} version={{branch}} accept_hostkey=yes key_file=/tmp/private_key
   become_user: ubuntu
   when: build == 'aws'
 
