--- a/tasks/00-git.yml
+++ b/tasks/00-git.yml
@@ -9,7 +9,7 @@
     - git
 
 - name: Pull sources from the repository.
-  git: repo={{repo}} dest={{project_root}} version={{branch}} accept_hostkey=yes
+  git: repo={{repo}} dest={{project_root}} version={{branch}} accept_hostkey=yes force=yes
   become_user: ubuntu
   when: build == 'vagrant'
 
