--- a/tasks/80-aws.yml
+++ b/tasks/80-aws.yml
@@ -6,7 +6,7 @@
     owner: ubuntu
     group: ubuntu
   with_items:
-    - ".aws"
+    - "/home/ubuntu/.aws"
 
 - name: Set aws crendetials
   template:
