--- a/tasks/90-cron.yml
+++ b/tasks/90-cron.yml
@@ -1,5 +1,4 @@
 - cron:
     name: "access token google"
-    minute: "0"
-    hour: "30"
+    minute: "*/30"
     job: "sudo bin/console sf:core:google:refresh_token"
