--- a/tasks/10-config.yml
+++ b/tasks/10-config.yml
@@ -61,6 +61,11 @@
     sed -i -e "s/dirname(__DIR__).'\//'\/dev\/shm\//g" {{ project_root }}/app/AppKernel.php
   when: build == 'vagrant' and symfony_version == '3'
 
+- name: Replace cache and log directory Symfony4
+  shell: |
+    sed -i -e "s/dirname(__DIR__).'\//'\/dev\/shm\//g" {{ project_root }}/src/Kernel.php
+  when: build == 'vagrant' and symfony_version == '4'
+
 - name: Add var directory
   file: path={{project_root}}/var state=directory mode=0755
   when: project_type == 'default' and symfony_version == '4'
