--- a/tasks/50-permissions.yml
+++ b/tasks/50-permissions.yml
@@ -16,9 +16,19 @@
     permissions: rwx
     recursive: true
     state: present
-  when: build == 'vagrant' and symfony_version == '2'
+  when: (build == 'vagrant' and symfony_version == '2') 
 
-- name: Set permission for logs folders.
+- name: Set permission for var folders.
+  acl:
+    path: /dev/shm/var
+    entity: www-data
+    etype: user
+    permissions: rwx
+    recursive: true
+    state: present
+  when: symfony_version == '4'
+
+  - name: Set permission for logs folders.
   acl:
     path: /dev/shm/logs
     entity: www-data
