--- a/tasks/50-permissions.yml
+++ b/tasks/50-permissions.yml
@@ -8,6 +8,10 @@
     state: present
   when: build == 'vagrant' and (symfony_version == '3' or symfony_version == '4')
 
+- name: chmod var log & cache folder
+  file: path=/dev/shm/var state=directory mode=0777 recurse=yes
+  when: project_type == 'default' and symfony_version == '4'
+
 - name: Set permission for cache folders.
   acl:
     path: /dev/shm/cache
