--- a/tasks/50-permissions.yml
+++ b/tasks/50-permissions.yml
@@ -6,7 +6,7 @@
     permissions: rwx
     recursive: true
     state: present
-  when: build == 'vagrant' and (symfony_version == '3' or symfony_version == '4')
+  when: build == 'vagrant' and symfony_version == '3'
 
 - name: chmod var log & cache folder
   file: path=/dev/shm/var state=directory mode=0777 recurse=yes
