--- a/tasks/50-permissions.yml
+++ b/tasks/50-permissions.yml
@@ -8,9 +8,9 @@
     state: present
   when: build == 'vagrant' and symfony_version == '3'
 
-- name: chmod var log & cache folder
-  file: path=/dev/shm/var state=directory mode=0777 recurse=yes
-  when: project_type == 'default' and symfony_version == '4'
+# - name: chmod var log & cache folder
+#   file: path=/dev/shm/var state=directory mode=0777 recurse=yes
+#   when: project_type == 'default' and symfony_version == '4'
 
 - name: Set permission for cache folders.
   acl:
