--- a/templates/env-sf4.yml
+++ b/templates/env-sf4.yml
@@ -10,7 +10,7 @@ DATABASE_URL=pgsql://{{ db_user }}:{{ db_pass }}@{{ db_host }}:5432/{{ db_name
 
 # FACEBOOK
 facebook_app_id={{ facebook_app_id }}
-facebook_secret={{ facebook_app_secret }}
+facebook_app_secret={{ facebook_app_secret }}
 facebook_graph_version={{ facebook_graph_version }}
 
 # JWT
@@ -28,7 +28,7 @@ GOOGLE_CLIENT_SECRET={{ google_client_secret }}
 MAILER_URL=null://localhost
 
 # REDIS
-redis_tcp='tcp://localhost:6379'
+redis_tcp={{ redis_tcp }}
 redis_password={{ redis_requirepass }}
 
 # MAILJET
