--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,7 +7,6 @@ symfony_version: "4"
 repo_git: ""
 env: ""
 branch: ""
-composer_path: ""
 
 db_host: ""
 db_name: ""
@@ -22,8 +21,30 @@ console_command: "bin/console"
 config_dir: "app/config"
 cache_command: cache:warmup
 
-manage_composer: True
-composer_run_install: True
+composer_path: /usr/local/bin/composer
+composer_keep_updated: false
+composer_version: ''
+
+# The directory where global packages will be installed.
+composer_home_path: '~/.composer'
+composer_home_owner: root
+composer_home_group: root
+
+# A list of packages to install globally. See commented examples below for
+# usage; the 'release' is optional, and defaults to '@stable'.
+composer_global_packages: []
+# - { name: phpunit/phpunit, release: "4.7.x" }
+# - { name: phpunit/phpunit, release: "@stable" }
+
+composer_add_to_path: true
+
+# Add a project vendor/bin directory to the PATH
+composer_add_project_to_path: false
+# composer_project_path: /path/to/project/vendor/bin
+
+# GitHub OAuth token (used to help overcome API rate limits).
+composer_github_oauth_token: ''
+
 
 enable_cache_warmup: True
 schema_update: False
