--- a/tasks/20-composer.yml
+++ b/tasks/20-composer.yml
@@ -17,6 +17,7 @@
   command: >
     {{ php_executable }} composer-installer.php {% if composer_version %} --version={{ composer_version }}{% endif %}
     chdir=/tmp
+  become_user: ubuntu  
 
 - name: Move Composer into globally-accessible location.
   command: >
@@ -67,4 +68,5 @@
 
 - name: Run composer install.
   shell: cd {{project_root}} && {{composer_path}} install
+  become_user: ubuntu
 
