Add Cron job for jerseys

--- a/tasks/90-cron.yml
+++ b/tasks/90-cron.yml
@@ -1,4 +1,25 @@
 - cron:
+    name: "update jerseys value"
+    minute: "1"
+    hour: "1"
+    user: root
+    job: "cd /var/www/sf-back/ && sudo bin/console sf:championship:jersey:update_jerseys_value"
+    cron_file: update_jerseys_value
+- cron:
+    name: "update jerseys popularity"
+    minute: "20"
+    hour: "1"
+    user: root
+    job: "cd /var/www/sf-back/ && sudo bin/console sf:championship:jersey:update_jerseys_popularity"
+    cron_file: update_jerseys_popularity
+- cron:
+    name: "update jerseys form"
+    minute: "40"
+    hour: "1"
+    user: root
+    job: "cd /var/www/sf-back/ && sudo bin/console sf:championship:jersey:update_jerseys_form"
+    cron_file: update_jerseys_form
+- cron:
     name: "access token google"
     minute: "*/30"
     user: root
