update composer become_user

--- a/tasks/20-composer.yml
+++ b/tasks/20-composer.yml
@@ -67,4 +67,5 @@
 
 - name: Run composer install.
   shell: cd {{project_root}} && {{composer_path}} install
+  become_user: "{{ composer_home_owner }}"
 
