--- a/tasks/90-cron.yml
+++ b/tasks/90-cron.yml
@@ -21,8 +21,8 @@
     cron_file: update_jerseys_popularity
 - cron:
     name: "reset league road season"
-    minute: "0"
-    hour: "0"
+    minute: "*"
+    hour: "*"
     user: root
     job: "cd /var/www/sf-back/ && sudo bin/console sf:ligueroad:reset_ligue_road_season"
     cron_file: reset_ligue_road_season
